kubernetes/apps/kube-system/authentik/app/metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-server-metrics
  namespace: kube-system
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
